# pyridis

./: .gitignore  Cargo.toml  justfile  pyrightconfig.json
.github/workflows/: pypi_api.yml  pypi_message.yml  release_pypi.yml
crates/flarrow-api-python/: Cargo.toml  pyproject.toml
crates/flarrow-api-python/examples/: test.py
crates/flarrow-api-python/python/flarrow_api_python/: __init__.py  __init__.pyi
crates/flarrow-api-python/src/: lib.rs
crates/flarrow-message-python/: Cargo.toml  pyproject.toml
crates/flarrow-message-python/examples/: enum_inherit.py  test.py
crates/flarrow-message-python/python/pyflarrow_message/: __init__.py  __init__.pyi
crates/flarrow-message-python/src/: lib.rs
crates/pyridis-api/: Cargo.toml  pyproject.toml
crates/pyridis-api/examples/: client.py  example.py  service.py  sink.py  source.py
crates/pyridis-api/python/pyridis_api/: __init__.pyi
crates/pyridis-api/src/: io.rs  lib.rs
crates/pyridis-examples/: Cargo.toml
crates/pyridis-examples/examples/: client.py  enum_inherit.py  io_runtime.rs  service.py  service_runtime.rs  simple_runtime.rs  sink.py  source.py
crates/pyridis-examples/src/: lib.rs
crates/pyridis-file-ext/: Cargo.toml
crates/pyridis-file-ext/src/: lib.rs  plugin.rs
crates/pyridis-message/: pyproject.toml
crates/pyridis-node/: Cargo.toml
crates/pyridis-node/examples/: test.rs
crates/pyridis-node/src/: lib.rs  node.rs
docs/: book.toml
docs/src/: SUMMARY.md  pyridis.md
examples/simple_runtime/: Cargo.toml
examples/simple_runtime/src/: main.rs
