[workspace]
members = ["crates/flarrow-api-python", "crates/flarrow-message-python"]
resolver = "3"

[workspace.package]
authors = ["Enzo Le Van <dev@enzo-le-van.fr>"]
description = "The flarrow python API and plugins"
edition = "2024"
homepage = "https://github.com/flarrow-rs/flarrow-python"
keywords = []
readme = "README.md"
rust-version = "1.85"
categories = []
documentation = "https://github.com/flarrow-rs/flarrow-python"
license = "Apache-2.0"
repository = "https://github.com/flarrow-rs/flarrow-python"
version = "0.3.1"

[workspace.dependencies]
flarrow-api = "0.3"
pyo3 = { version = "0.24", features = [
    "default",
    "experimental-async",
    "eyre",
    "extension-module",
] }
tokio = { version = "1", features = ["full"] }

arrow = { version = "55", features = ["pyarrow"] }
