[workspace]
members = [
    "crates/pyridis-api",
    "crates/pyridis-file-ext",
    "crates/pyridis-message",
    "crates/pyridis-node",

    "crates/pyridis-examples",
]
resolver = "3"

[workspace.package]
authors = ["Enzo Le Van <dev@enzo-le-van.fr>"]
description = "iridis, with python"
edition = "2024"
homepage = "https://github.com/iridis-rs/iridis-python"
keywords = []
readme = "README.md"
rust-version = "1.85"
categories = []
documentation = "https://github.com/iridis-rs/iridis-python"
license = "Apache-2.0"
repository = "https://github.com/iridis-rs/iridis-python"
version = "0.3.2"

[workspace.dependencies]
iridis-api = "0.3"
iridis-file-ext = "0.3"
iridis = "0.3"

pyo3 = { version = "0.24", features = [
    "default",
    "eyre",
    "auto-initialize",
    "experimental-async",
    "abi3-py38",
] }

pyo3-async-runtimes = { version = "0.24", features = [
    "attributes",
    "tokio-runtime",
] }

pyridis-node = { version = "0.3.2", path = "crates/pyridis-node" }

tokio = { version = "1", features = ["full"] }
arrow = { version = "55", features = ["pyarrow"] }

pyridis-api = { version = "0.3.2", path = "crates/pyridis-api" }
pyridis-file-ext = { version = "0.3.2", path = "crates/pyridis-file-ext" }
