[build-system]
requires = ["maturin>=1.8,<2.0"]
build-backend = "maturin"

[project]
name = "flarrow_api_python"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
dynamic = ["version"]
dependencies = []

[project.optional-dependencies]
tests = ["pytest", "ruff>=0.11.1"]

[tool.maturin]
python-source = "python"
features = ["pyo3/extension-module"]

[tool.pyright]
venvPath = "."
venv = ".venv"
