[package]
name = "flarrow-message-python"
authors.workspace = true
description.workspace = true
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
readme.workspace = true
rust-version.workspace = true
categories.workspace = true
documentation.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true

[lib]
name = "pyflarrow_message"
crate-type = ["cdylib", "rlib"]

[dependencies]
pyo3 = { workspace = true }
arrow = { workspace = true }
