[build-system]
requires = ["maturin>=1.8,<2.0"]
build-backend = "maturin"

[project]
name = "pyflarrow_message"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
dynamic = ["version"]
dependencies = [
    "pyarrow>=17.0.0",
]

[project.optional-dependencies]
tests = ["pytest", "ruff>=0.11.1"]

[tool.maturin]
python-source = "python"
features = ["pyo3/extension-module"]

[tool.pyright]
venvPath = "."
venv = ".venv"
