[package]
name = "pyridis-file-ext"
authors.workspace = true
description.workspace = true
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
readme.workspace = true
rust-version.workspace = true
categories.workspace = true
documentation.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[features]
cdylib = []

[dependencies]
iridis-file-ext = { workspace = true }

pyridis-node = { workspace = true }
