[package]
name = "pyridis-node"
authors.workspace = true
description.workspace = true
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
readme.workspace = true
rust-version.workspace = true
categories.workspace = true
documentation.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[features]
cdylib = []

[dependencies]
iridis-api = { workspace = true }
pyridis-api = { workspace = true }
tokio = { workspace = true }
eyre = { workspace = true }

pyo3 = { workspace = true }
pyo3-async-runtimes = { workspace = true }
